# writing-os-in-rust

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
a-freestanding-binary/: Cargo.toml
a-freestanding-binary/.cargo/: config
a-freestanding-binary/src/: main.rs
src/: lib.rs
src/asm/: boo.S  mem.S  trap.S
