[package]
name = "leios"
version = "0.1.0"
authors = ["Zongmin Lei <leizongmin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cortex-m-rt = "0.6.12"
#cortex-m-semihosting = "0.3.5"
#panic-halt = "0.2.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "leios"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
